--- a/nginx.conf
+++ b/nginx.conf
@@ -13,4 +13,27 @@ server {
     location = /50x.html {
         root /usr/share/nginx/html;
     }
-}
+}                                                              
+# server {
+#     listen 80;
+#     server_name _ bbf.friday.com.ec www.bbf.friday.com.ec;
+#     root /var/www/friday-bbf-frontv2/dist;
+
+#     add_header X-Frame-Options "SAMEORIGIN";
+#     add_header X-XSS-Protection "1; mode=block";
+#     add_header X-Content-Type-Options "nosniff";
+#     client_max_body_size 10M;
+
+#     index index.html;
+
+#     charset utf-8;
+
+#     location / {
+#         try_files $uri $uri/ /index.html?$query_string;
+#     }
+#     error_page 404 /index.html;
+
+#     location ~ /\.(?!well-known).* {
+#         deny all;
+#     }
+# }
